--- a/manifest.json
+++ b/manifest.json
@@ -1,16 +1,15 @@
 {
-    "manifest_version": 2,
+    "manifest_version": 3,
     "name": "Short to Video",
-    "version": "1.0",
+    "version": "1.1",
     "description": "Open a new tab of the youtube short you're currently on but as a video.",
     "permissions": ["activeTab"],
-    "browser_action": {
+    "action": {
       "default_icon": "icon.png",
       "default_popup": "popup.html"
     },
     "background": {
-      "scripts": ["background.js"],
-      "persistent": false
+      "service_worker": "background.js"
     },
     "icons": {
       "48": "icon.png"
